Fix too light fonts in about and single-product views, update readme

--- a/src/main/resources/static/css/about.css
+++ b/src/main/resources/static/css/about.css
@@ -219,3 +219,7 @@ footer a {
   color: #fff;
   font-weight: bold;
 }
+
+#about p, #selfPromotion p {
+    font-weight: 300;
+}
